Fix modal visibility (#390)

--- a/frontend/src/components/Modal/styles.scss
+++ b/frontend/src/components/Modal/styles.scss
@@ -31,11 +31,10 @@
 }
 
 .modal-input-field {
-  height: 33px;
   border: solid #f6f6f6 1.5px;
   background-color: rgb(243, 243, 243);
   border-radius: 3px;
-  padding: 15px 12px 15px 12px;
+  padding: 5px 12px 5px 12px;
   font-weight: 400 !important;
   transition: all 0.3s;
   font-size: 15px;
